fix checkbox align

--- a/backend/css/admin.css
+++ b/backend/css/admin.css
@@ -208,7 +208,7 @@ input.savebutton { position:absolute; right:28px; top:41px	 }
 form { padding: 0; margin: 0; }
 input, img { vertical-align: middle; }
 input, textarea { font-size: 13px; margin: 0; padding: 2px; color: black; }
-input[type="radio"], input[type="checkbox"], input.checkbox { border: none; margin: 0 5px 0 0; padding: 0; }
+input[type="radio"], input[type="checkbox"], input.checkbox { border: none; margin: 6px 0 0; }
 input[type="image"], .imagebutton { border: none; margin: 0; padding: 0; vertical-align:middle; background-color: transparent; cursor: pointer; }
 input[type="file"] { background-color: transparent; cursor: pointer;}
 input.imagebutton { border: none; margin: 0; padding: 0; vertical-align:middle; margin-top: -1px; margin-bottom: -1px;    }
@@ -338,8 +338,8 @@ ul.tabs li.active:hover { background: #F3F3F3; }
 .contentedit_file select { margin: 3px; margin-left: 0; vertical-align: middle; }
 .contentedit_file .thumb { max-height: 200px; max-width: 200px; margin: 3px 0px 1px 0px; }
 .contentedit_checkbox { margin-top: 4px; margin-bottom: 0px; }
-.contentedit_checkbox input { float: left; margin-top: -15px; }
-.contentedit_checkbox label { margin-left: 18px; border: none;}
+.contentedit_checkbox input { float: left; display: inline-block; }
+.contentedit_checkbox label { display: inline-block; margin-left: 5px; border: none;}
 .contentedit_nodelist input { display: inline; }
 .contentedit_nodelist label { display: inline; }
 .contentedit_date input { }
